# Axe

./: .gitattributes  Cargo.toml  README.md  REFACTOR_PLAN.md  \  ]  demo_new_syntax.axe  hello.ax  test_assign_vs_let.axe  test_builtins.axe  test_lists.axe  test_match2  test_user_code.axe
benches/: README.md  vm_bench.rs
docs/: examples.md  getting-started.md  index.md  language-reference.md  vm-memory.md
examples/: builtins.axe  class.harin  classes.ax  d.ax  fibonacci.ax  fibonacci.axe  functions.ax  hello.axe  imports.ax  lists.ax  loops.ax  math.ax  oops-1.ax  oops-1.axe  recursion.ax  scoping_explained.ax  scoping_explained.axe  simple_counter.ax  simple_counter.axe  test.ax  test.axe
src/: ast.rs  context.rs  eval.rs  interner.rs  lib.rs  main.rs  parser.rs  tokeniser.rs  transformer.rs
src/interpreter/: builtins.rs  compiler.rs  instructions.rs  mod.rs  tree_walker.rs  value.rs  vm.rs
src/stack_vm/: compiler.rs  disassembler.rs  instructions.rs  mod.rs  vm.rs
src/tree_walker/: builtins.rs  environment.rs  interpreter.rs  mod.rs  resolver.rs  value.rs
src/vm/: builtins.rs  bytecode.rs  compiler.rs  disassembler.rs  instructions.rs  mod.rs  tables.rs  vm.rs
tests/: assign_tests.rs  assignment_tests.rs  block_tests.rs  comparison_tests.rs  eval_tests.rs  for_loop_tests.rs  function_tests.rs  if_tests.rs  inc_dec_tests.rs  parser_tests.rs  parser_validation_tests.rs  print_test.rs  variable_tests.rs  variable_validation_tests.rs  while_tests.rs
tests/ast/: assign_tests.rs  assignment_tests.rs  block_tests.rs  break_tests.rs  class_tests.rs  main.rs  (+12 more)
(+1 files in other folders)
